#################################################################################
### $Id: CMakeLists.txt 5593 2009-10-05 16:05:20Z FloSoft $
#################################################################################

PROJECT(resample-1.8.1)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
CMAKE_POLICY(SET CMP0003 NEW)

################################################################################

ADD_SUBDIRECTORY( sndlib-20 )
ADD_SUBDIRECTORY( src )

#################################################################################
