#################################################################################
### $Id: CMakeLists.txt 6126 2010-03-07 18:22:45Z FloSoft $
#################################################################################

PROJECT(resample-1.8.1)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
CMAKE_POLICY(SET CMP0003 NEW)

################################################################################

ADD_FLAGS(CMAKE_C_FLAGS "-std=c99")

ADD_SUBDIRECTORY( sndlib-20 )
ADD_SUBDIRECTORY( src )

#################################################################################
