ADD_SUBDIRECTORY( src ) 


########### install files ###############




#original Makefile.am contents follow:

#################################################################################
### $Id: Makefile.am 1374 2006-12-18 18:31:43Z FloSoft $
#################################################################################
#
## Verweis auf die Makefiles der Unterverzeichnisse
#SUBDIRS = src
#
#.PHONY: mrproper
#
#mrproper:
#	sh $(srcdir)/cleanup.sh
