#################################################################################
### $Id: CMakeLists.txt 5593 2009-10-05 16:05:20Z FloSoft $
#################################################################################

ADD_LIBRARY(resample-sndlib-20 STATIC audio.c sound.c io.c headers.c)
		
#################################################################################
